@@ -1,17 +1,19 @@
 Here's some help about how you can use FileFix to change your fileareas.
 
-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 %list		list of fileareas avialable
 %help		what are you reading, pal? :)
 %unlinked       list of unlinked fileareas
+%linked         list of linked fileareas
+%query          the same
 %pause          stop recieve files
 %resume         recieved files again
-+<echotag>	subscribe filearea
++<echotag>	subscribe filearea (not support mask)
 <echotag>	the same
 -<echotag>	unsubscribe filearea
 
 attention!	all other lines are *ignored*
-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 
 
 Example:
